--- a/EssentialFeed2.xcodeproj/xcshareddata/xcschemes/EssentialFeed2.xcscheme
+++ b/EssentialFeed2.xcodeproj/xcshareddata/xcschemes/EssentialFeed2.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "AC1A6C0A25A257DC008A1CA2"
+            BuildableName = "EssentialFeed2.framework"
+            BlueprintName = "EssentialFeed2"
+            ReferencedContainer = "container:EssentialFeed2.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO"
