Include `EssentialFeed2CacheIntegrationTests` test target in the CI scheme to guarantee we build and run all cache integration tests as part of the continuous integration pipeline.

--- a/EssentialFeed2.xcodeproj/xcshareddata/xcschemes/CI.xcscheme
+++ b/EssentialFeed2.xcodeproj/xcshareddata/xcschemes/CI.xcscheme
@@ -61,6 +61,17 @@
                ReferencedContainer = "container:EssentialFeed2.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            testExecutionOrdering = "random">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "AC82D6D42614B802007E01FA"
+               BuildableName = "EssentialFeed2CacheIntegrationTests.xctest"
+               BlueprintName = "EssentialFeed2CacheIntegrationTests"
+               ReferencedContainer = "container:EssentialFeed2.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
