--- a/EssentialFeed2.xcodeproj/xcshareddata/xcschemes/EssentialFeediOS.xcscheme
+++ b/EssentialFeed2.xcodeproj/xcshareddata/xcschemes/EssentialFeediOS.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "ACA981BC2618DD6E006BA157"
-               BuildableName = "EssentialFeedIOS.framework"
-               BlueprintName = "EssentialFeedIOS"
+               BuildableName = "EssentialFeediOS.framework"
+               BlueprintName = "EssentialFeediOS"
                ReferencedContainer = "container:EssentialFeed2.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "ACA981BC2618DD6E006BA157"
-            BuildableName = "EssentialFeedIOS.framework"
-            BlueprintName = "EssentialFeedIOS"
+            BuildableName = "EssentialFeediOS.framework"
+            BlueprintName = "EssentialFeediOS"
             ReferencedContainer = "container:EssentialFeed2.xcodeproj">
          </BuildableReference>
       </CodeCoverageTargets>
@@ -45,8 +45,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "ACA981C42618DD6E006BA157"
-               BuildableName = "EssentialFeedIOSTests.xctest"
-               BlueprintName = "EssentialFeedIOSTests"
+               BuildableName = "EssentialFeediOSTests.xctest"
+               BlueprintName = "EssentialFeediOSTests"
                ReferencedContainer = "container:EssentialFeed2.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -73,8 +73,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "ACA981BC2618DD6E006BA157"
-            BuildableName = "EssentialFeedIOS.framework"
-            BlueprintName = "EssentialFeedIOS"
+            BuildableName = "EssentialFeediOS.framework"
+            BlueprintName = "EssentialFeediOS"
             ReferencedContainer = "container:EssentialFeed2.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
